<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	style="@style/custom_parent_layout"
    tools:context=".QuestionsSet1Activity" >
    
    <!-- Question 1 -->
   <FrameLayout 
       	android:id="@+id/frame1"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">
    <TextView
	    android:id="@+id/question1"
	   	android:text="@string/btn_question_1"
	    style="@style/question_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
    </FrameLayout>
    
   <!-- Answers -->
   <FrameLayout 
       	android:id="@+id/frame2"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame1"
        android:layout_marginTop="10dp">
    <ImageView
        android:id="@+id/btnImgAnswer1a"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ1a"
	   	android:text="@string/answer_q1a"	   	
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>
   
   <FrameLayout 
       	android:id="@+id/frame3"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame2"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/btnImgAnswer1b"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ1b"
	   	android:text="@string/answer_q1b"
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>
	
   <FrameLayout 
       	android:id="@+id/frame4"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame3"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/btnImgAnswer1c"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ1c"
	   	android:text="@string/answer_q1c"
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>
   
   <FrameLayout 
       	android:id="@+id/frame5"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame4"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/btnImgAnswer1d"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ1d"
	   	android:text="@string/answer_q1d"
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>
   
   <FrameLayout 
       	android:id="@+id/frame6"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame5"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/btnImgAnswer1e"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ1e"
	   	android:text="@string/answer_q1e"
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>
   
   <FrameLayout 
       	android:id="@+id/frame7"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame6"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/btnImgAnswer1f"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ1f"
	   	android:text="@string/answer_q1f"
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>

   <!--         android:onClick="btnImgAnswersOnClick"
    -->
</RelativeLayout>