<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	style="@style/custom_parent_layout"
    tools:context=".QuestionsSet2Activity" >

    <!-- Question 2 -->
   <FrameLayout 
       	android:id="@+id/frame1"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">
    <TextView
	    android:id="@+id/question2"
	   	android:text="@string/btn_question_2"
	    style="@style/question_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
    </FrameLayout>
    
   <!-- Answers -->
   <FrameLayout 
       	android:id="@+id/frame2"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame1"
        android:layout_marginTop="10dp">
    <ImageView
        android:id="@+id/btnImgAnswer2a"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ2a"
	   	android:text="@string/answer_q2a"	   	
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>
   
   <FrameLayout 
       	android:id="@+id/frame3"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame2"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/btnImgAnswer2b"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ2b"
	   	android:text="@string/answer_q2b"
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>

   <FrameLayout 
       	android:id="@+id/frame4"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame3"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/btnImgAnswer2c"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ2c"
	   	android:text="@string/answer_q2c"
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>
   
   <FrameLayout 
       	android:id="@+id/frame5"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame4"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/btnImgAnswer2d"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ2d"
	   	android:text="@string/answer_q2d"
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>
   
   <FrameLayout 
       	android:id="@+id/frame6"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_below="@id/frame5"
        android:layout_marginTop="5dp">
    <ImageView
        android:id="@+id/btnImgAnswer2e"
	    style="@style/answer_imageView"
        android:src="@drawable/box1" />
    <TextView
	    android:id="@+id/answerQ2e"
	   	android:text="@string/answer_q2e"
	   	style="@style/answer_textView"
	   	android:textAppearance="?android:attr/textAppearanceLarge" />
	</FrameLayout>
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
</RelativeLayout>